--- a/struct/templates/includes/main-header--page-struct.pug
+++ b/struct/templates/includes/main-header--page-struct.pug
@@ -5,7 +5,7 @@ ul
             i.menu-mask(tabindex="-1")
             a.menu-dropdown Playground
             .menu-dropdown-content
-                a(href="#") Compute salaries
+                a(href="/prototypes/refli-describe.html") Compute salaries
                 a(href="#") Convert PDF invoices
                 a(href="#") View CODA files
 
