--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -39,8 +39,6 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/cover.html") Cover
                     li
-                        a(href="/specimens/cover-form.html") Cover + form
-                    li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
                 h1 Prototypes
                 p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
@@ -49,3 +47,5 @@ html(dir="ltr", lang="en")
                         a(href="/prototypes/refli-index-struct.html") Refli homepage
                     li
                         a(href="/prototypes/refli-index-struct-constant.html") Refli homepage (constant)
+                    li
+                        a(href="/prototypes/refli-describe.html") Salary computation form
