--- a/struct/templates/prototypes/refli-describe.pug
+++ b/struct/templates/prototypes/refli-describe.pug
@@ -12,7 +12,7 @@ html(dir="ltr", lang="en")
             .u-container
                 .u-bar
                     .u-bar__left
-                        a(href="#")
+                        a(href="/prototypes/refli-index-struct-constant.html")
                             img(src="/static/images/logo.svg" alt="Refli")
                     .u-bar__right
                         include ../includes/main-header--page-struct
