--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -21,6 +21,10 @@ body {font-family: 'IBM Plex Sans';}
 .bordered {
   border: 2px solid black;
 }
+.bordered-3 {
+  border: 2px solid black;
+  border-bottom: none;
+}
 
 .u-container-vertical {
   /* TODO I'd like the padding-top to be the same as the flow-all for a c-text h1.
@@ -196,6 +200,19 @@ hr {
   flex-basis: calc((var(--measure) - 100%) * 999);
 }
 
+.switcher-0px {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse; // We want the last button horizontally (right hand) be the first vertically.
+  gap: 4px 0px; // We want a small gap vertically.
+}
+
+.switcher-0px > * {
+  --measure: 40ch;
+  flex-basis: calc((var(--measure) - 100%) * 999);
+  flex-grow: 1;
+}
+
 
 /* Top-level wrapper to push the footer at the bottom of the viewport.
    This is useful when there is not enough content to push the footer
@@ -226,6 +243,9 @@ hr {
 // instead of some specific value (like o-containers).
 .max-64rem {
   max-width: 64rem;
+}
+.max-48rem {
+  max-width: 48rem;
 }
 
 
@@ -364,6 +384,12 @@ hr {
   display: inline-flex;
 }
 
+.c-button--tall {
+  padding: 1rem 2rem 3rem;
+  justify-content: left;
+  vertical-align: top;
+}
+
 // Button label
 .c-button span {
   white-space: nowrap;
@@ -385,13 +411,33 @@ hr {
   }
 
   &:hover {
-    background: #aaa;
-    border-color: #aaa;
+    background: #999;
+    border-color: #999;
+  }
+
+  &:active {
+    background: #777;
+    border-color: #777;
+  }
+}
+
+// Secondary button variant
+.c-button--secondary {
+  background: #fff;
+  color: #000;
+
+  svg * {
+    fill: currentColor;
+  }
+
+  &:hover {
+    background: #ddd;
+    border-color: #000;
   }
 
   &:active {
     background: #999;
-    border-color: #999;
+    border-color: #000;
   }
 }
 
