--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -39,6 +39,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/cover.html") Cover
                     li
+                        a(href="/specimens/form.html") Form
+                    li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
                 h1 Prototypes
                 p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
