--- a/struct/templates/specimens/form.pug
+++ b/struct/templates/specimens/form.pug
@@ -8,8 +8,8 @@ html(dir="ltr", lang="en")
         link(rel="stylesheet", href="/static/css/struct/scale.css")
         link(rel="stylesheet", href="/static/css/struct/misc.css")
     body
-        .u-container
-            .c-text.flow-all
+        .u-container.u-container-vertical
+            .c-text.flow
                 h1 Form
                 p This page shows how .box can be replaced by a combination of .bordered and .u-container-vertical if a horizontal rule or buttons should reach the border.
             .bordered.max-64rem.u-flow-c-0
@@ -30,9 +30,9 @@ html(dir="ltr", lang="en")
                         .c-text.flow
                             p Lorem ipsum.
 
-            .bordered.u-flow-c-0
+            .max-48rem.u-flow-c-0
                 form
-                    .u-container.u-container-vertical
+                    .u-container.u-container-vertical.bordered-3
                         .c-text.flow
                             h2 Log in to Reesd
                             div
@@ -43,11 +43,11 @@ html(dir="ltr", lang="en")
                                 input.c-input
                             div
                                 a(href="#") Reset password
-                    .switcher
-                        // TODO Support simple link  a(href="#") Register
-                        button.c-button.c-button--primary(type="submit")
-                            span Register
-                        button.c-button.c-button--primary(type="submit")
+                    .switcher-0px
+                        button.c-button.c-button--primary.c-button--tall(type="submit")
                             span Log in
                             svg(width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
                                 <path d="M12.2929 5.29289C12.6834 4.90237 13.3166 4.90237 13.7071 5.29289L19.7071 11.2929C19.8946 11.4804 20 11.7348 20 12C20 12.2652 19.8946 12.5196 19.7071 12.7071L13.7071 18.7071C13.3166 19.0976 12.6834 19.0976 12.2929 18.7071C11.9024 18.3166 11.9024 17.6834 12.2929 17.2929L16.5858 13L5 13C4.44772 13 4 12.5523 4 12C4 11.4477 4.44772 11 5 11L16.5858 11L12.2929 6.70711C11.9024 6.31658 11.9024 5.68342 12.2929 5.29289Z" fill="#595959"/>
+                        // TODO Support simple link  a(href="#") Register
+                        button.c-button.c-button--secondary.c-button--tall(type="submit")
+                            span Register
