--- a/struct/templates/specimens/overview.pug
+++ b/struct/templates/specimens/overview.pug
@@ -99,8 +99,10 @@ html(dir="ltr", lang="en")
         .u-container
             .c-text.flow-all
                 h1 Box vs u-container
-                p .box is the combination of .bordered, u-container-vertical, and u-container.
+                p .box is the combination of .bordered, u-container-vertical, and u-container. .u-container and .u-container-vertical (i.e. .box without border) are identical to .inset.
             .box
+                p.lorem
+            .inset
                 p.lorem
             .bordered
                 .u-container-vertical
@@ -108,19 +110,32 @@ html(dir="ltr", lang="en")
                         p.lorem
 
         hr.hr-full
+        mixin form-content
+            h4 Title
+            p.lorem
+            div
+                label Label
+                input.c-input
+                p.lorem-1.mute
+            button.c-button.c-button--primary(type="submit")
+                span Submit
+                svg(width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
+                            <path d="M12.2929 5.29289C12.6834 4.90237 13.3166 4.90237 13.7071 5.29289L19.7071 11.2929C19.8946 11.4804 20 11.7348 20 12C20 12.2652 19.8946 12.5196 19.7071 12.7071L13.7071 18.7071C13.3166 19.0976 12.6834 19.0976 12.2929 18.7071C11.9024 18.3166 11.9024 17.6834 12.2929 17.2929L16.5858 13L5 13C4.44772 13 4 12.5523 4 12C4 11.4477 4.44772 11 5 11L16.5858 11L12.2929 6.70711C11.9024 6.31658 11.9024 5.68342 12.2929 5.29289Z" fill="#595959"/>
 
         .u-container
-            .c-text.flow-all
+            .c-text.flow-all.max-64rem
                 h1 Form
+                +form-content
             .box.max-64rem.u-flow-c-0
                 form.c-text.flow
-                    h4 Title
-                    div
-                        input.c-input
-                    button.c-button.c-button--primary(type="submit")
-                        span Submit
-                        svg(width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg")
-                            <path d="M12.2929 5.29289C12.6834 4.90237 13.3166 4.90237 13.7071 5.29289L19.7071 11.2929C19.8946 11.4804 20 11.7348 20 12C20 12.2652 19.8946 12.5196 19.7071 12.7071L13.7071 18.7071C13.3166 19.0976 12.6834 19.0976 12.2929 18.7071C11.9024 18.3166 11.9024 17.6834 12.2929 17.2929L16.5858 13L5 13C4.44772 13 4 12.5523 4 12C4 11.4477 4.44772 11 5 11L16.5858 11L12.2929 6.70711C11.9024 6.31658 11.9024 5.68342 12.2929 5.29289Z" fill="#595959"/>
+                    +form-content
+            .inset.max-64rem
+                form.c-text.flow
+                    +form-content
+            .inset.max-64rem
+                .box
+                    form.c-text.flow
+                        +form-content
 
         hr.hr-full
 
