--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -37,6 +37,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/type-scale-d.html") Type scale D
                     li
+                        a(href="/specimens/button.html") Button
+                    li
                         a(href="/specimens/cover.html") Cover
                     li
                         a(href="/specimens/form.html") Form
