--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -39,6 +39,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/placeholders.html") Placeholders
                     li
+                        a(href="/specimens/flexbox.html") Flexbox
+                    li
                         a(href="/specimens/button.html") Button
                     li
                         a(href="/specimens/cover.html") Cover
