Mention the switcher.

--- a/struct/templates/specimens/flexbox.pug
+++ b/struct/templates/specimens/flexbox.pug
@@ -92,3 +92,9 @@ html(dir="ltr", lang="en")
                     .b-x64
                     .b-x64
                     .b-x64
+
+                p The switcher pattern allows to distribute the space horizontally, unless there isn't enough room, at which point it switches to a vertical layout. (See <a href="https://github.com/aprietof/every-layout">every-layout</a>.)
+                .switcher
+                    .b-x64
+                    .b-x64
+                    .b-x64
