Move Lorem rules to lorem.scss.

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -55,6 +55,8 @@ h4 {font-size: var(--step-c-1);}
 p {font-size: var(--step-c-0); line-height: 1.5em;}
 p small {font-size: var(--step-c--1); line-height: 1.5em;}
 .limit-p p {max-width: 42em;}
+.limit-40ch {width: 40ch;}
+.limit-42em {width: 42em;}
 .mute {color: #666;}
 .c-text a {color: blue; text-decoration: none;}
 .c-content a {color: blue; text-decoration: none;}
