--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -37,6 +37,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/type-scale-d.html") Type scale D
                     li
+                        a(href="/specimens/lorem.html") Lorem ipsum
+                    li
                         a(href="/specimens/placeholders.html") Placeholders
                     li
                         a(href="/specimens/flexbox.html") Flexbox
