--- a/struct/templates/specimens/flexbox.pug
+++ b/struct/templates/specimens/flexbox.pug
@@ -8,6 +8,7 @@ html(dir="ltr", lang="en")
         link(rel="stylesheet", href="/static/css/struct/scale.css")
         link(rel="stylesheet", href="/static/css/struct/placeholders.css")
         link(rel="stylesheet", href="/static/css/struct/misc.css")
+        link(rel="stylesheet", href="/static/css/struct/layouts.css")
     body
         .u-container
             .c-text.flow-all
