--- a/struct/templates/specimens/overview.pug
+++ b/struct/templates/specimens/overview.pug
@@ -9,6 +9,7 @@ html(dir="ltr", lang="en")
         link(rel="stylesheet", href="/static/css/struct/lorem.css")
         link(rel="stylesheet", href="/static/css/struct/placeholders.css")
         link(rel="stylesheet", href="/static/css/struct/misc.css")
+        link(rel="stylesheet", href="/static/css/struct/layouts.css")
     body
         .u-container.c-text.flow-all
           h1 Overview
