--- a/struct/templates/prototypes/refli-describe.pug
+++ b/struct/templates/prototypes/refli-describe.pug
@@ -25,8 +25,9 @@ html(dir="ltr", lang="en")
                         p Using the form on this page, you can compute a net salary and its associated professional withholding tax and social security contributions.
                     .box
                         form.c-text.flow
-                            h4 Gross monthly salary
+                            h4 Salary computation
                             div
+                                label Gross monthly salary
                                 input.c-input
                             button.c-button.c-button--primary(type="submit")
                                 span Compute
