Re-redefine 1rem to be 16px.
Initially we used 1rem equals 10px, like in the original Mono work, but
I'm not sure how useful this is, especially as we have to carefully
choose our values or we generate them anyway.

Sites such as utopia.fyi and CSS libraries like Tachyons also use the
default 16px, so using that should make some interoperability easier.

--- a/struct/scss/struct/foundations.scss
+++ b/struct/scss/struct/foundations.scss
@@ -1,4 +1,4 @@
-// This defines a CSS Reset, the box-sizing, and a rem to be 10px.
+// This defines a CSS Reset, and the box-sizing.
 // See foundations.pug.
 
 @import "reset";
@@ -7,12 +7,4 @@
 *:before,
 *:after {
   box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.6rem;
 }
