--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -52,6 +52,8 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/form.html") Form
                     li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
+                    li
+                        a(href="/specimens/tachyons.html") Tachyons
                 h1 Prototypes
                 p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
                 ul
