Expose the Struct pages on hypered.design.

--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -10,56 +10,5 @@ html(dir="ltr", lang="en")
     body.u-container-vertical
         .u-container
             .c-text.flow
-                h1 Notes
-                p These are implementation notes. The long-term goal is to explain how to create the (struct based) design from scratch, with no previous knowledge of CSS or HTML.
-                ul
-                    li
-                        a(href="/notes/foundations.html") Foundations
-                    li
-                        a(href="/notes/technicalities.html") Technicalities
-                    li
-                        a(href="/notes/media-queries.html") Media queries
-                    li
-                        a(href="/notes/dimensions.html") Dimensions
-                h1 Specimens
-                p These are card-like pages to showcase specifics of the design implementation.
-                ul
-                    li
-                        a(href="/specimens/overview.html") Overview
-                    li
-                        a(href="/specimens/type-scale.html") Type scale
-                    li
-                        a(href="/specimens/type-scale-a.html") Type scale A
-                    li
-                        a(href="/specimens/type-scale-b.html") Type scale B
-                    li
-                        a(href="/specimens/type-scale-c.html") Type scale C
-                    li
-                        a(href="/specimens/type-scale-d.html") Type scale D
-                    li
-                        a(href="/specimens/lorem.html") Lorem ipsum
-                    li
-                        a(href="/specimens/limits.html") Limits
-                    li
-                        a(href="/specimens/placeholders.html") Placeholders
-                    li
-                        a(href="/specimens/flexbox.html") Flexbox
-                    li
-                        a(href="/specimens/button.html") Button
-                    li
-                        a(href="/specimens/cover.html") Cover
-                    li
-                        a(href="/specimens/form.html") Form
-                    li
-                        a(href="/specimens/dropdown.html") Pure CSS dropdown
-                    li
-                        a(href="/specimens/tachyons.html") Tachyons
-                h1 Prototypes
-                p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
-                ul
-                    li
-                        a(href="/prototypes/refli-index-struct.html") Refli homepage
-                    li
-                        a(href="/prototypes/refli-index-struct-constant.html") Refli homepage (constant)
-                    li
-                        a(href="/prototypes/refli-describe.html") Salary computation form
+                h1 Struct
+                p See <a href="/struct.html">/struct.html</a>.
