Introduce a struct/fonts.scss file.

--- a/struct/templates/notes/foundations.pug
+++ b/struct/templates/notes/foundations.pug
@@ -5,6 +5,7 @@ html(dir="ltr", lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="/static/css/struct/foundations.css")
         link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
+        link(rel="stylesheet", href="/static/css/struct/fonts.css")
         link(rel="stylesheet", href="/static/css/struct/scale.css")
         link(rel="stylesheet", href="/static/css/struct/misc.css")
     body
@@ -31,8 +32,8 @@ html(dir="ltr", lang="en")
                 // width: dimensions we want within the iframe plus the border
                 // around the iframe.
                 .wrrrap
-                  iframe(width=964, height=604, src="/index.html")
-                a(href="/index.html") View example page
+                  iframe(width=964, height=604, src="/struct.html")
+                a(href="/struct.html") View example page
 
                 p Note: most links, when followed, replace the current page in the browser. If you want to keep the current page in its own tab, and open a link in a new tab, you can do so by holding the Control (<code>Ctrl</code>) key and left-clicking the link. (You can also right-click the link and select "Open in a new tab", but holding Control is slightly faster.)
 
