--- a/struct/templates/prototypes/refli-index-struct.pug
+++ b/struct/templates/prototypes/refli-index-struct.pug
@@ -3,11 +3,7 @@ html(dir="ltr", lang="en")
     head
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        link(rel="stylesheet", href="/static/css/struct/foundations.css")
-        link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
-        link(rel="stylesheet", href="/static/css/struct/scale.css")
-        link(rel="stylesheet", href="/static/css/struct/misc.css")
-        link(rel="stylesheet", href="/static/css/struct/layouts.css")
+        link(rel="stylesheet", href="/static/css/struct.css")
     body.u-container-vertical
         header
             .u-container
