--- a/struct/templates/specimens/button.pug
+++ b/struct/templates/specimens/button.pug
@@ -5,6 +5,7 @@ html(dir="ltr", lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="/static/css/struct/foundations.css")
         link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
+        link(rel="stylesheet", href="/static/css/struct/fonts.css")
         link(rel="stylesheet", href="/static/css/struct/scale.css")
         link(rel="stylesheet", href="/static/css/struct/misc.css")
         link(rel="stylesheet", href="/static/css/struct/layouts.css")
