--- a/struct/templates/specimens/tachyons.pug
+++ b/struct/templates/specimens/tachyons.pug
@@ -3,10 +3,7 @@ html(dir="ltr", lang="en")
     head
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        link(rel="stylesheet", href="/static/css/struct/foundations.css")
-        link(rel="stylesheet", href="/static/css/struct/ibm-plex.css")
-        link(rel="stylesheet", href="/static/css/struct/scale.css")
-        link(rel="stylesheet", href="/static/css/struct/misc.css")
+        link(rel="stylesheet", href="/static/css/struct.css")
         link(rel="stylesheet", href="/static/css/struct/tachyons.css")
     body
         .u-container
