--- a/struct/templates/prototypes/refli-index-struct-constant.pug
+++ b/struct/templates/prototypes/refli-index-struct-constant.pug
@@ -1,75 +1,16 @@
-doctype html
-html(dir="ltr", lang="en")
-    head
-        meta(charset="utf-8")
-        meta(name="viewport" content="width=device-width, initial-scale=1")
-        link(rel="stylesheet", href="/static/css/struct.css")
-    body.u-container-vertical
-        header
-            .u-container
-                .u-bar
-                    .u-bar__left
-                        a(href="#")
-                            img(src="/static/images/logo.svg" alt="Refli")
-                    .u-bar__right
-                        include ../includes/main-header--page-struct
+extends ../layouts/refli
 
-        .u-container
-            style.
-              .u-step-d-3 {
-                letter-spacing: 0;
-              }
-            .flow-all
-                h1.u-step-d-3 Exploring compensation calculation in Belgium
-            .switcher
-                .flow-all
-                    p Refli's mission is to make payroll calculation rules in Belgium accessible, by providing documentation, data, and calculation tools all on one platform. Our goal is to be useful to a wide audience, including students, payroll professionals and software developers alike.
+block content
+    style.
+      .u-step-d-3 {
+        letter-spacing: 0;
+      }
+    .flow-all
+        h1.u-step-d-3 Exploring compensation calculation in Belgium
+    .switcher
+        .flow-all
+            p Refli's mission is to make payroll calculation rules in Belgium accessible, by providing documentation, data, and calculation tools all on one platform. Our goal is to be useful to a wide audience, including students, payroll professionals and software developers alike.
 
-                    p We believe that even the most complex concepts can be made understandable, and we're committed to breaking down barriers in payroll calculation.
-                div
-                    // empty
-
-        footer
-            .u-container
-                hr
-                .switcher
-                    .c-content.flow
-                        h4 Refli
-                        ul
-                            li
-                                a(href="/about.html") About
-                            li
-                                a(href="/changelog.html") Changelog
-                            li
-                                a(href="/contact.html") Contact
-                            li
-                                a(href="/disclaimer.html") Disclaimer
-                            li
-                                a(href="/documentation.html") Documentation
-                    .c-content.flow
-                        h4 Social security contributions
-                        ul
-                            li
-                                a(href="#") Personal contributions
-                            li
-                                a(href="#") Employment bonus
-                            li
-                                a(href="#") Special contribution
-                    .c-content.flow
-                        h4 Professional tax withholding
-                        ul
-                            li
-                                a(href="#") Fixed professional fees
-                            li
-                                a(href="#") Basic scale
-                            li
-                                a(href="#") Reductions for dependant children
-                        h4 Rounding method
-                        ul
-                            li
-                                a(href="#") Rounding
-                            li
-                                a(href="#") Professional tax withholding details
-
-                hr
-                span © Hypered SRL, 2023.
+            p We believe that even the most complex concepts can be made understandable, and we're committed to breaking down barriers in payroll calculation.
+        div
+            // empty
