--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -64,8 +64,8 @@ html(dir="ltr", lang="en")
                 p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
                 ul
                     li
-                        a(href="/prototypes/refli-index-struct.html") Refli homepage
+                        a(href="/prototypes/refli/index.html") Refli homepage
                     li
-                        a(href="/prototypes/refli-index-struct-constant.html") Refli homepage (constant)
+                        a(href="/prototypes/refli/index-constant.html") Refli homepage (constant)
                     li
-                        a(href="/prototypes/refli-describe.html") Salary computation form
+                        a(href="/prototypes/refli/describe.html") Salary computation form
