Add login and signup pages.

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -163,6 +163,9 @@ hr {
 .u-flow-c-0 {
   margin-top: calc(var(--step-c-0) * 1.4);
 }
+.u-space-after-c-4 {
+  margin-bottom: calc(var(--step-c-4) * 1.4);
+}
 
 .paragraph-70ch p {
   max-width: 70ch;
