--- a/struct/templates/includes/main-header--page-struct.pug
+++ b/struct/templates/includes/main-header--page-struct.pug
@@ -9,13 +9,13 @@ ul
             i.menu-mask(tabindex="-1")
             a.menu-dropdown Playground
             .menu-dropdown-content
-                a(href="/prototypes/refli-describe.html") Compute salaries
+                a(href="/prototypes/refli/describe.html") Compute salaries
                 a(href="#") Convert PDF invoices
                 a(href="#") View CODA files
 
     li
         .menu-item
-            a(href="#").menu-link Login
+            a(href="/prototypes/refli/login.html").menu-link Login
     li
         .menu-item
-            a(href="#").menu-link Sign up
+            a(href="/prototypes/refli/signup.html").menu-link Sign up
