Remove the second horizontal rule in footer.

--- a/struct/templates/layouts/refli/page.pug
+++ b/struct/templates/layouts/refli/page.pug
@@ -60,5 +60,5 @@ html(dir="ltr", lang="en")
                             li
                                 a(href="#") Professional tax withholding details
 
-                hr
-                span © Hypered SRL, 2023.
+                .flow.u-flow-c-4
+                    span © Hypered SRL, 2023.
