Add some white space after the form.

--- a/struct/templates/prototypes/refli/describe.pug
+++ b/struct/templates/prototypes/refli/describe.pug
@@ -1,7 +1,7 @@
 extends ../../layouts/refli/page
 
 block content
-    .switcher.switch-at-60rem.u-flow-c-4
+    .switcher.switch-at-60rem.u-flow-c-4.u-space-after-c-4
         .flow
             h1 Compute a gross-to-net salary conversion
             p Using the form on this page, you can compute a net salary and its associated professional withholding tax and social security contributions.
