Add missing links to index page.

--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -68,4 +68,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/index-constant.html") Refli homepage (constant)
                     li
+                        a(href="/prototypes/refli/login.html") Log in
+                    li
+                        a(href="/prototypes/refli/signup.html") Sign up
+                    li
                         a(href="/prototypes/refli/describe.html") Salary computation form
