Add a subsection under prototypes.

--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -62,11 +62,12 @@ html(dir="ltr", lang="en")
 
                 h2 Prototypes
                 p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
+                h3 Refli
                 ul
                     li
-                        a(href="/prototypes/refli/index.html") Refli homepage
+                        a(href="/prototypes/refli/index.html") Homepage
                     li
-                        a(href="/prototypes/refli/index-constant.html") Refli homepage (constant)
+                        a(href="/prototypes/refli/index-constant.html") Homepage (constant)
                     li
                         a(href="/prototypes/refli/login.html") Log in
                     li
