--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -59,6 +59,8 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
                     li
                         a(href="/specimens/tachyons.html") Tachyons
+                    li
+                        a(href="/specimens/logo.html") logo
 
                 h2 Prototypes
                 p These are complete, high-fidelity pages for existing or future application pages, including occasional variants.
