Add possible "logos".

--- a/struct/templates/specimens/logo.pug
+++ b/struct/templates/specimens/logo.pug
@@ -19,3 +19,9 @@ html(dir="ltr", lang="en")
                 img(src="/static/images/prototype.svg" alt="The Prototype logo")
                 div
                     span.logo prototype
+                div
+                    span.logo curiosity
+                div
+                    span.logo cty
+                div
+                    span.logo Reesd
