--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -52,6 +52,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/button.html") Button
                     li
+                        a(href="/specimens/buttons.html") Buttons
+                    li
                         a(href="/specimens/cover.html") Cover
                     li
                         a(href="/specimens/form.html") Form
