--- a/struct/templates/prototypes/refli/login.pug
+++ b/struct/templates/prototypes/refli/login.pug
@@ -18,6 +18,5 @@ block content
                 button.c-button.c-button--primary.c-button--tall(type="submit")
                     span Log in
                     +arrow-right
-                // TODO Support simple link  a(href="#") Register
-                button.c-button.c-button--secondary.c-button--tall(type="submit")
-                    span Register
+                a.c-button.c-button--secondary.c-button--tall(href="signup.html")
+                    span Sign up
