--- a/struct/templates/prototypes/refli/signup.pug
+++ b/struct/templates/prototypes/refli/signup.pug
@@ -19,6 +19,5 @@ block content
                 button.c-button.c-button--primary.c-button--tall(type="submit")
                     span Sign up
                     +arrow-right
-                // TODO Support simple link  a(href="#") Register
-                button.c-button.c-button--secondary.c-button--tall(type="submit")
+                a.c-button.c-button--secondary.c-button--tall(href="login.html")
                     span Log in
