--- a/struct/templates/specimens/form.pug
+++ b/struct/templates/specimens/form.pug
@@ -49,6 +49,5 @@ html(dir="ltr", lang="en")
                         button.c-button.c-button--primary.c-button--tall(type="submit")
                             span Log in
                             +arrow-right
-                        // TODO Support simple link  a(href="#") Register
-                        button.c-button.c-button--secondary.c-button--tall(type="submit")
-                            span Register
+                        a.c-button.c-button--secondary.c-button--tall(href="#")
+                            span Sign up
