Small navigation bar changes.
- Push a bit the dropdown, so it has some whitespace between the
  dropdown content and the rectangular button background.
- "Log in" instead of "Login".

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -294,7 +294,7 @@ hr {
 /* Style the dropdown content. */
 .menu-item .menu-dropdown-content {
   position: absolute;
-  top: 0;
+  top: 0.4rem;
   background-color: white;
   min-width: 20ch;
   border: 2px solid #dddddd;
