Add a reset password page.

--- a/struct/templates/prototypes/refli/login.pug
+++ b/struct/templates/prototypes/refli/login.pug
@@ -13,7 +13,7 @@ block content
                         label Password
                         input.c-input
                     div
-                        a(href="#") Reset password
+                        a(href="reset.html") Reset password
             .switcher-0px
                 button.c-button.c-button--primary.c-button--tall(type="submit")
                     span Log in
