--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -77,4 +77,6 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/signup.html") Sign up
                     li
+                        a(href="/prototypes/refli/reset.html") Reset password
+                    li
                         a(href="/prototypes/refli/describe.html") Salary computation form
