--- a/struct/templates/prototypes/refli/signup.pug
+++ b/struct/templates/prototypes/refli/signup.pug
@@ -2,7 +2,7 @@ extends ../../layouts/refli/page
 
 block content
     .max-48rem.u-flow-c-4.u-space-after-c-4.center
-        form
+        form(method="GET", action="message-signup-success.html")
             .u-container.u-container-vertical.bordered-3
                 .c-text.flow
                     h2 Sign up for Refli
