--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -77,6 +77,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/signup.html") Sign up
                     li
+                        a(href="/prototypes/refli/message-signup-success.html") Sign up success
+                    li
                         a(href="/prototypes/refli/reset.html") Reset password
                     li
                         a(href="/prototypes/refli/describe.html") Salary computation form
