--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -13,3 +13,4 @@ html(dir="ltr", lang="en")
             .c-text.flow
                 h1 Struct
                 p See <a href="/struct.html">/struct.html</a>.
+                p (This page is served at the root when developing Struct, but otherwise is not visible when the Struct pages are part of hypered.design.)
