--- a/struct/scss/struct/foundations.scss
+++ b/struct/scss/struct/foundations.scss
@@ -1,5 +1,5 @@
 // This defines a CSS Reset, and the box-sizing.
-// See foundations.pug.
+// See foundations.pug (or https://hypered.design/notes/foundations.html).
 
 @import "reset";
 
