--- a/struct/scss/struct/ibm-plex.scss
+++ b/struct/scss/struct/ibm-plex.scss
@@ -1,6 +1,5 @@
-/*  ----------------------------------------------------------------------------
-    Fonts (IBM Plex)
-    ------------------------------------------------------------------------- */
+// This defines the IBM Plex Sans font at different weights.
+// See fonts.pug (or https://hypered.design/notes/fonts.html).
 
 @font-face {
   font-family: 'IBM Plex Sans';
