--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -25,6 +25,8 @@ html(dir="ltr", lang="en")
                         a(href="/notes/media-queries.html") Media queries
                     li
                         a(href="/notes/dimensions.html") Dimensions
+                    li
+                        a(href="/notes/fonts.html") Fonts
 
                 h2 Specimens
                 p These are card-like pages to showcase specifics of the design implementation.
