Reformat placeholder rules.

--- a/struct/templates/specimens/placeholders.pug
+++ b/struct/templates/specimens/placeholders.pug
@@ -14,8 +14,9 @@ html(dir="ltr", lang="en")
             .c-text.flow-all
                 h1 Placeholders
                 p Xxx.
-            .b-x64
-            .b-256x64
-            .b-128x64
-            .b-xl-xl
-            .b-l-s
+            .flow-all
+                .b-x64
+                .b-256x64
+                .b-128x64
+                .b-xl-xl
+                .b-l-s
