--- a/struct/scss/struct/placeholders.scss
+++ b/struct/scss/struct/placeholders.scss
@@ -39,47 +39,58 @@ $g-placeholder-unit: 0.5rem !default; // Same as g-spacer-unit.
   width: 128px;
   height: 64px;
   border: 2px solid black;
+
+  &:before {
+    content: 'b128x64';
+  }
 }
-.b-128x64:before {
-  content: 'b128x64';
-}
+
 .i-128x64 {
   width: 128px;
   height: 64px;
   border: 2px solid black;
   display: inline-block;
+
+  &:before {
+    content: 'i128x64';
+  }
 }
-.i-128x64:before {
-  content: 'i128x64';
-}
+
 .b-256x64 {
   width: 256px;
   height: 64px;
   border: 2px solid black;
+
+  &:before {
+    content: '256x64';
+  }
 }
-.b-256x64:before {
-  content: '256x64';
-}
+
 .b-x64 {
   height: 64px;
   border: 2px solid black;
+
+  &:before {
+    content: '*x64';
+  }
 }
-.b-x64:before {
-  content: '*x64';
-}
+
 .b-l-s {
   width: var(--space-l);
   height: var(--space-s);
   border: 2px solid black;
+
+  &:before {
+    content: 'l-s';
+  }
 }
-.b-l-s:before {
-  content: 'l-s';
-}
+
 .b-xl-xl {
   width: var(--space-xl);
   height: var(--space-xl);
   border: 2px solid black;
-}
-.b-xl-xl:before {
-  content: 'xl-xl';
+
+  &:before {
+    content: 'xl-xl';
+  }
 }
