Add pages for the notes.
Those are empty for now but help visualize where we're going.

--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -27,6 +27,14 @@ html(dir="ltr", lang="en")
                         a(href="/notes/dimensions.html") Dimensions
                     li
                         a(href="/notes/fonts.html") Fonts
+                    li
+                        a(href="/notes/scales.html") Scales
+                    li
+                        a(href="/notes/flow.html") Flow
+                    li
+                        a(href="/notes/placeholders.html") Placeholders
+                    li
+                        a(href="/notes/layouts.html") Layouts
 
                 h2 Specimens
                 p These are card-like pages to showcase specifics of the design implementation.
